use blockPost.py remove under the _post directory files from earlier author

--- a/_posts/2015-12-30-the-end-2015.md
+++ b/_posts/2015-12-30-the-end-2015.md
@@ -3,6 +3,7 @@ layout: post
 title:  2015年总结
 date:   2015-12-30 10:55:11
 category: "other"
+published : false
 ---
 
 12月30号了，时间就像沙子一样从手掌中流逝，每次做总结的时候，都觉得时间过的真快。
