--- a/_posts/2014-12-31-the-end-2014.md
+++ b/_posts/2014-12-31-the-end-2014.md
@@ -3,6 +3,7 @@ layout: post
 title:  2014年总结
 date:   2014-12-31 23:55:11
 category: "other"
+published : false
 ---
 
 现在是2014年12月31号23:12，一晃就年底了，在这里做下总结和明年的目标。
