--- a/_posts/2016-12-27-the-end-2016.md
+++ b/_posts/2016-12-27-the-end-2016.md
@@ -3,6 +3,7 @@ layout: post
 title:  2016年总结
 date:   2016-12-27 20:56:11
 category: "other"
+published : false
 ---
 
 2016年12月17号晚21点25分，儿子睡了，开始总结2016年的往事种种。
